<resources>
    <string name="app_name">Campus Connect</string>
    <string name="welcome_to_campus_connect">Welcome to\n</string>
    <string name="login_btn_text">Login</string>
    <string name="sign_up_btn_text">Sign Up\n</string>
    <string name="app_logo">App Logo</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password\n</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="profile_image">profile image</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="log_out">Log Out</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="event_date_format">Event Date (e.g., 2024-12-01)</string>
    <string name="rsvp_link">RSVP Link</string>
    <string name="select_poster_image">Select Poster Image</string>
    <string name="create_event">Create Event</string>
</resources>