<!-- activity_create_event.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Event Title -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/campus_connect_logo" />

    <EditText
        android:id="@+id/eventTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/event_title"
        android:inputType="text" />

    <!-- Event Description -->
    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/event_description"
        android:inputType="textMultiLine" />

    <!-- Event Date -->
    <EditText
        android:id="@+id/eventDateEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/event_date_format"
        android:inputType="date" />

    <!-- RSVP Link -->
    <EditText
        android:id="@+id/eventRsvpLinkEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/rsvp_link"
        android:inputType="textUri" />

    <!-- Event Poster Image -->

    <Button
        android:id="@+id/selectPosterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:gravity="center|center_horizontal"
        android:text="@string/select_poster_image"
        android:textAlignment="center"
        android:textColor="@color/theme_purple" />

    <ImageView
        android:id="@+id/eventPosterImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <!-- Submit Event Button -->
    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_purple"
        android:text="@string/create_event" />
</LinearLayout>
