<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/signupLogo"
            android:layout_width="131dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/campus_connect_logo" />

        <!-- Title -->
        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ar_one_sans"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Profile Image (ImageView instead of ImageButton) -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/avatar"/>

        <!-- Select Profile Picture Button -->
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/theme_purple"
            android:padding="10dp"
            android:text="@string/select_profile_picture" />

        <!-- Name Field -->
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/signupEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/signupPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/signupConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <!-- Sign-Up Button -->
        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/theme_purple"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <!-- Login Link -->
        <TextView
            android:id="@+id/loginLinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="goToLogin"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
