<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar" />

    <!-- User Name -->
    <TextView
        android:id="@+id/profileNameTextView"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/full_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- User Email -->
    <TextView
        android:id="@+id/profileEmailTextView"
        android:layout_width="139dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- Log Out Button -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/theme_purple"
        android:text="@string/log_out"
        android:textColor="@color/white" />

</LinearLayout>
